newsfeed linkonly on title, fix overflow text problem

--- a/css/main.css
+++ b/css/main.css
@@ -12,16 +12,6 @@
 	clear: both;
 }
 
-.nav {
-	width: 90%;
-	margin: 0 auto;
-	margin-bottom: 10px;
-}
-.content {
-	margin: 0 auto;
-	width: 90%;
-	text-align: center;
-}
 
 body {
 			width:100%;
